# Scrabble

./: .gitmodules  CMakeLists.txt  compile_commands.json  tags
assets/: players.txt
assets/boards/: scarabeo.txt  scrabble.txt
assets/dictionaries/: abc4.txt  ita.txt
src/: .Handler.h.swp  .main.cpp.swp  Board.cpp  Board.h  BoardTiles.h  Deck.cpp  Deck.h  Dictionary.cpp  Dictionary.h  Dizionario.cpp  Dizionario.h  EndScreenHandler.cpp  EventHandler.h  InterBoard.cpp  InterBoard.h  InterTile.cpp  InterTile.h  Player.cpp  Player.h  TileSheet.cpp  TileSheet.h  TurnHandler.cpp  WordInfo.cpp  WordInfo.h  constants.h  handlers.h  main.cpp  media.cpp  media.h
